refactor code -  update tên hàm và sửa string.isEmpty